@@ -17,6 +17,7 @@ markers =
     integrationtest: mark a test as integration test that accesses a service (like postgres, mongodb etc.)
     requests: mark a test as test of the requests library instrumentation
     boto3: mark a test as test of the boto3 library instrumentation
+    elasticsearch: mark a test as elasticsearch test
 
 [isort]
 line_length=80
