@@ -55,8 +55,51 @@ services:
     ports:
       - "6379:6379"
 
+  elasticsearch6:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.0
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "network.host="
+      - "transport.host=127.0.0.1"
+      - "http.host=0.0.0.0"
+      - "xpack.security.enabled=false"
+    volumes:
+      - pyesdata6:/usr/share/elasticsearch/data
+
+  elasticsearch5:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "network.host="
+      - "transport.host=127.0.0.1"
+      - "http.host=0.0.0.0"
+      - "xpack.security.enabled=false"
+    volumes:
+      - pyesdata5:/usr/share/elasticsearch/data
+
+  elasticsearch2:
+    image: elasticsearch:2
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "network.host="
+      - "transport.host=127.0.0.1"
+      - "http.host=0.0.0.0"
+      - "xpack.security.enabled=false"
+    volumes:
+      - pyesdata2:/usr/share/elasticsearch/data
+
   run_tests:
     image: apm-agent-python:${PYTHON_VERSION}
+    environment:
+      ES_6_URL: 'http://elasticsearch6:9200'
+      ES_5_URL: 'http://elasticsearch5:9200'
+      ES_2_URL: 'http://elasticsearch2:9200'
 
 
 volumes:
@@ -69,4 +112,10 @@ volumes:
   pymongodata34:
     driver: local
   pymongodata36:
+    driver: local
+  pyesdata6:
+    driver: local
+  pyesdata5:
+    driver: local
+  pyesdata2:
     driver: local
