@@ -1,0 +1,2 @@
+elasticsearch>=2.0,<3.0
+-r requirements-base.txt
