@@ -1,0 +1,5 @@
+export PYTEST_MARKER="-m elasticsearch"
+export ES_URL="http://elasticsearch5:9200"
+export DOCKER_DEPS="elasticsearch5"
+export WAIT_FOR_HOST="elasticsearch5"
+export WAIT_FOR_PORT=9200
