@@ -1,0 +1,5 @@
+export PYTEST_MARKER="-m elasticsearch"
+export ES_URL="http://elasticsearch6:9200"
+export DOCKER_DEPS="elasticsearch6"
+export WAIT_FOR_HOST="elasticsearch6"
+export WAIT_FOR_PORT=9200
