@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 set -e
+
 export PATH=${HOME}/.local/bin:${PATH}
 python -m pip install --user -U pip --cache-dir "${PIP_CACHE}"
 python -m pip install --user -r "tests/requirements/requirements-${WEBFRAMEWORK}.txt" --cache-dir "${PIP_CACHE}"
